--- a/ScriptViewDemo.app/Contents/Info.plist
+++ b/ScriptViewDemo.app/Contents/Info.plist
@@ -10,6 +10,8 @@
 	<string>applet</string>
 	<key>CFBundleIconFile</key>
 	<string>applet</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.apple.ScriptEditor.id.6B66B3D5-8C50-46C1-85A4-358307E506B6</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -27,17 +29,21 @@
 	<true/>
 	<key>WindowState</key>
 	<dict>
+		<key>bundleDividerCollapsed</key>
+		<true/>
+		<key>bundlePositionOfDivider</key>
+		<real>0.0</real>
 		<key>dividerCollapsed</key>
 		<false/>
 		<key>eventLogLevel</key>
-		<integer>-1</integer>
+		<integer>2</integer>
 		<key>name</key>
 		<string>ScriptWindowState</string>
 		<key>positionOfDivider</key>
-		<real>484</real>
+		<real>503</real>
 		<key>savedFrame</key>
-		<string>491 56 602 818 0 0 1600 878 </string>
-		<key>selectedTabView</key>
+		<string>412 55 602 818 0 0 1440 877 </string>
+		<key>selectedTab</key>
 		<string>description</string>
 	</dict>
 </dict>
